--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </svg>
   </div>
   <ol class="colors">
-    <li id="red" class="red active"></li>
+    <li id="black" class="black active"></li>
+    <li id="red" class="red"></li>
     <li id="green" class="green"></li>
     <li id="blue" class="blue"></li>
     <li id="yellow" class="yellow"></li>
