--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li id="yellow" class="yellow"></li>
   </ol>
   <ol class="sizes">
-    <li id="thin" class="thin"></li>
+    <li id="thin" class="thin active"></li>
     <li id="thick" class="thick"></li>
   </ol>
   <script src="//at.alicdn.com/t/font_780955_fgdn8b0dy7.js"></script>
